RESOLVED FIXED269607
AX: Fix for multiple issues concerning <label> elements containing input elements.
https://bugs.webkit.org/show_bug.cgi?id=269607
Summary AX: Fix for multiple issues concerning <label> elements containing input elem...
Andres Gonzalez
Reported 2024-02-16 13:12:55 PST
.
Attachments
Patch (12.46 KB, patch)
2024-02-16 13:28 PST, Andres Gonzalez
no flags
Patch (24.12 KB, patch)
2024-02-19 08:03 PST, Andres Gonzalez
no flags
Patch (24.09 KB, patch)
2024-02-19 08:51 PST, Andres Gonzalez
no flags
Patch (24.16 KB, patch)
2024-02-19 11:51 PST, Andres Gonzalez
no flags
Patch (25.45 KB, patch)
2024-02-19 12:56 PST, Andres Gonzalez
no flags
Patch (25.51 KB, patch)
2024-02-19 18:55 PST, Andres Gonzalez
no flags
Patch (25.57 KB, patch)
2024-02-20 05:10 PST, Andres Gonzalez
no flags
Patch (25.95 KB, patch)
2024-02-20 07:13 PST, Andres Gonzalez
no flags
Patch (25.99 KB, patch)
2024-02-20 10:30 PST, Andres Gonzalez
no flags
Patch (31.63 KB, patch)
2024-02-21 15:03 PST, Andres Gonzalez
ews-feeder: commit-queue-
Patch (31.66 KB, patch)
2024-02-21 18:14 PST, Andres Gonzalez
no flags
Patch (36.86 KB, patch)
2024-02-22 05:14 PST, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2024-02-16 13:13:03 PST
Andres Gonzalez
Comment 2 2024-02-16 13:28:45 PST
Tyler Wilcock
Comment 3 2024-02-17 13:43:37 PST
Comment on attachment 469925 [details] Patch Looks good to me after build and test failures are resolved
Andres Gonzalez
Comment 4 2024-02-19 08:03:54 PST
Created attachment 469959 [details] Patch Adding new expectations for Mac and iOS.
Andres Gonzalez
Comment 5 2024-02-19 08:51:11 PST
Andres Gonzalez
Comment 6 2024-02-19 11:51:46 PST
Andres Gonzalez
Comment 7 2024-02-19 12:56:19 PST
Andres Gonzalez
Comment 8 2024-02-19 18:55:54 PST
Created attachment 469985 [details] Patch Not for review, trying to debug GTK failures.
Andres Gonzalez
Comment 9 2024-02-20 05:10:03 PST
Andres Gonzalez
Comment 10 2024-02-20 07:13:05 PST
Andres Gonzalez
Comment 11 2024-02-20 10:30:59 PST
Andres Gonzalez
Comment 12 2024-02-21 15:03:27 PST
Andres Gonzalez
Comment 13 2024-02-21 18:14:04 PST
Andres Gonzalez
Comment 14 2024-02-22 05:14:59 PST
EWS
Comment 15 2024-02-22 08:40:46 PST
Committed 275180@main (684b75aed0f6): <https://commits.webkit.org/275180@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470010 [details].
Note You need to log in before you can comment on or make changes to this bug.